			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04g: *********************************

IMP: (3/8/06, RK) Make all the "was called from DatabaseChangesThread" warnings in ServerJobManager.java print the stack trace so we can find and fix those calls

BUG: (3/7/06, GVG) HistoryDialog crashing because ProjectCell.getComment() was null (Bug #856)
FIX: Assigning "" if comment is null.

BUG: (3/7/06, GVG) LayersTab not catching NullException if j3DUtilsClass is null (not sure why) (Bug#857)
FIX: Check if j3DUtilsClass before searching for get3DColorsInTab method.

IMP: (3/6/06, RK) More support to copy Node names from schematic to layout

BUG: (3/7/06, GVG) Error in ERCWell code that prevents regressions from running.

BUG: (3/7/06, GVG) Too long messages in UserInterfaceMain.askForChoice (Bug #854).
FIX: Ability to shrink message and display only 10 256-character lines.

BUG: (3/6/06, DN) Error whne initializing imn MDI mode.
FIX: Remove "new EventProcessor" from "UserInterfaceMain.initializeInitJob".

IMP: (3/6/06, RK) More support to copy Node names from schematic to layout

BUG: (3/6/06, DN) Check invariants at creating snapshot is too slow.
FIX: Check them more incrementally.

BUG: (3/5/06, GVG) On Mac OX S, double click on library didn't open in Electric.
FIX: Another job in UserInterface to call "setInitJob".

BUG: (3/3/06, GVG) Exception in MenuBar.finished() and ToolBar.finished() when setUI(null) (Bug #843).
FIX: line commented out.

IMP: (3/3/06, GVG) New Spice engine in SpiceTab. This is for those running HSpice for Assura.

IMP: (3/3/06, RK) Add NCC Annotation to Cell throws serialization exception. Due to new client/server model. (Bugzilla# 844)

IMP: (3/2/06, GVG) Adding DRC and AreaCoverage regression tests in main code.

IMP: (3/2/06, GVG) DRC Exclusion working hierarchically (Bug #841)
